--- a/pom.xml
+++ b/pom.xml
@@ -86,6 +86,12 @@
 			<version>4.4.0</version>
 			<scope>test</scope>
 		</dependency>
+		<dependency>
+			<groupId>org.testcontainers</groupId>
+			<artifactId>postgresql</artifactId>
+			<version>1.16.0</version> <!-- Versão atual do Testcontainers -->
+			<scope>test</scope>
+		</dependency>
 	</dependencies>
 	<build>
 		<plugins>
